[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Daria Kharitonova <kharitonovadari@gmail.com>"]
license = "MIT"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
